Updated playing with tmux theme and colors.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,23 @@
+## TMUX CUSTOMIZATION FILE
+# Author R. Bate
+
+# AUTOMATIC RENAMING
 set-option -wg automatic-rename off
 
-set -g pane-active-border fg=red
-set -ag pane-active-border bg=magenta
+# Border panes, active and inactive
+set -g pane-border-style 'fg=colour0,bg=colour234'
+set -g pane-active-border-style 'fg=colour70,bg=colour235'
+
+# change the background color to white
+set -g window-style 'fg=colour242,bg=colour232'
+set -g window-active-style 'fg=colour87,bg=colour233'
+
+# Status bar
+set-option -g status-style 'bg=colour234,fg=colour70'
+
+# window titles
+set-window-option -g window-status-style 'bg=colour17,fg=colour234'
+set-window-option -g window-status-current-style 'bg=colour16,fg=colour70'
 
 # change the background color to white
 # set -g window-active-style bg=white
@@ -18,12 +34,40 @@ bind r source-file ~/.tmux.conf
 # unbind '"'
 # unbind %
 
-bind - split-window -h
-bind | split-window -v
+bind - split-window -v
+bind | split-window -h
 
 ## Make use of xclip to copy to system register
-# bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-# bind C-c run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-c run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+
+## Design changes here !!
+
+
+# Start counting pane and window number at 1
+# set -g base-index 1
+# setw -g pane-base-index 1
+
+set -s set-clipboard external
+
+bind r source-file ~/.tmux.conf
+
+# Uncomment these lines to get rid of the defaults
+# unbind '"'
+# unbind %
+
+bind - split-window -v
+bind | split-window -h
+
+## Make use of xclip to copy to system register
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-c run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
