Fixed shell script bug. Added reload conf file message. Added description in README.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,8 +38,8 @@ bind - split-window -v
 bind | split-window -h
 
 ## Make use of xclip to copy to system register
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-c run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
+bind C-c run-shell "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-c run-shell "tmux set-buffer $(xclip -o -sel clipboard); tmux paste-buffer"
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -56,7 +56,7 @@ bind -n M-Down select-pane -D
 
 set -s set-clipboard external
 
-bind r source-file ~/.tmux.conf
+bind r source-file $HOME/.tmux.conf \; display "tmux config reloaded!"
 
 # Uncomment these lines to get rid of the defaults
 # unbind '"'
@@ -64,15 +64,6 @@ bind r source-file ~/.tmux.conf
 
 bind - split-window -v
 bind | split-window -h
-
-## Make use of xclip to copy to system register
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-c run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
-
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
 
 
 ## Design changes here !!
