--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,52 +19,33 @@ set-option -g status-style 'bg=colour234,fg=colour70'
 set-window-option -g window-status-style 'bg=colour17,fg=colour234'
 set-window-option -g window-status-current-style 'bg=colour16,fg=colour70'
 
-# change the background color to white
-# set -g window-active-style bg=white
-
 # Start counting pane and window number at 1
 # set -g base-index 1
 # setw -g pane-base-index 1
 
-set -s set-clipboard external
-
-bind r source-file ~/.tmux.conf
+bind - split-window -v
+bind | split-window -h
 
 # Uncomment these lines to get rid of the defaults
 # unbind '"'
 # unbind %
-
-bind - split-window -v
-bind | split-window -h
 
 ## Make use of xclip to copy to system register
-bind C-c run-shell "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-c run-shell "tmux set-buffer $(xclip -o -sel clipboard); tmux paste-buffer"
-
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-
-## Design changes here !!
-
-
-# Start counting pane and window number at 1
-# set -g base-index 1
-# setw -g pane-base-index 1
-
 set -s set-clipboard external
 
+bind C-S-c run-shell "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-S-v run-shell "tmux set-buffer $(xclip -o -sel clipboard); tmux paste-buffer"
+
+## Fast pane selection
+bind -n C-S-Left select-pane -L
+bind -n C-S-Right select-pane -R
+bind -n C-S-Up select-pane -U
+bind -n C-S-Down select-pane -D
+
+#bind -n C-Right select-pane -R
+#bind -n C-Up select-pane -U
+#bind -n C-Down select-pane -D
+
+## Reload config file
 bind r source-file $HOME/.tmux.conf \; display "tmux config reloaded!"
-
-# Uncomment these lines to get rid of the defaults
-# unbind '"'
-# unbind %
-
-bind - split-window -v
-bind | split-window -h
-
-
-## Design changes here !!
 
