bashrc: configured tmux socket to /tmp/rbate/; added /local/bin/bin to /afs/cern.ch/user/r/rbate/local/bin/bin:/afs/cern.ch/user/r/rbate/local/bin:/afs/cern.ch/atlas/scripts:/afs/cern.ch/user/r/rbate/local/bin/bin:/afs/cern.ch/user/r/rbate/local/bin:/afs/cern.ch/user/r/rbate/local/bin/bin:/afs/cern.ch/user/r/rbate/local/bin:/afs/cern.ch/user/r/rbate/local/bin/bin:/afs/cern.ch/user/r/rbate/local/bin:/afs/cern.ch/user/r/rbate/local/bin/bin:/afs/cern.ch/user/r/rbate/local/bin:/afs/cern.ch/atlas/scripts:/cvmfs/sft.cern.ch/lcg/views/LCG_101_ATLAS_26/x86_64-centos7-gcc11-opt/nvvm/bin:/cvmfs/sft.cern.ch/lcg/views/LCG_101_ATLAS_26/x86_64-centos7-gcc11-opt/scripts:/cvmfs/sft.cern.ch/lcg/views/LCG_101_ATLAS_26/x86_64-centos7-gcc11-opt/bin:/cvmfs/sft.cern.ch/lcg/releases/gcc/11.3.0-ad0f5/x86_64-centos7/bin:/cvmfs/sft.cern.ch/lcg/releases/binutils/2.37-355ed/x86_64-centos7/bin:/afs/cern.ch/user/r/rbate/local/bin/bin:/afs/cern.ch/user/r/rbate/local/bin:/afs/cern.ch/atlas/scripts:/usr/sue/bin:/usr/lib64/qt-3.3/bin:/usr/condabin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/puppetlabs/bin:/afs/cern.ch/user/r/rbate/.local/bin:/afs/cern.ch/user/r/rbate/bin:/afs/cern.ch/user/r/rbate/.local/bin:/afs/cern.ch/user/r/rbate/bin. Added py script to make a socket. README: installation notes from conda and salt. .tmux.conf: recoinfigured color theme. Added gitignore.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,10 @@
 ## TMUX CUSTOMIZATION FILE
 # Author R. Bate
 
-# AUTOMATIC RENAMING
-set-option -wg automatic-rename off
 
+
+## COLOURS ##
+#=============================================================================#
 # Border panes, active and inactive
 set -g pane-border-style 'fg=colour0,bg=colour234'
 set -g pane-active-border-style 'fg=colour70,bg=colour235'
@@ -16,25 +17,41 @@ set -g window-active-style 'fg=colour87,bg=colour233'
 set-option -g status-style 'bg=colour234,fg=colour70'
 
 # window titles
-set-window-option -g window-status-style 'bg=colour17,fg=colour234'
-set-window-option -g window-status-current-style 'bg=colour16,fg=colour70'
+set-window-option -g window-status-style 'fg=color242,bg=color232'
+set-window-option -g window-status-current-style 'fg=colour87,bg=colour233'
+#=============================================================================#
+
+
+## TABS ##
+#=============================================================================#
+# AUTOMATIC RENAMING
+set-option -wg automatic-rename off
 
 # Start counting pane and window number at 1
 # set -g base-index 1
 # setw -g pane-base-index 1
 
-bind - split-window -v
-bind | split-window -h
-
+#=============================================================================#
 # Uncomment these lines to get rid of the defaults
 # unbind '"'
 # unbind %
 
+
+## CLIPBOARD ##
+#=============================================================================#
 ## Make use of xclip to copy to system register
 set -s set-clipboard external
 
 bind C-S-c run-shell "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-S-v run-shell "tmux set-buffer $(xclip -o -sel clipboard); tmux paste-buffer"
+
+bind C-w run-shell "tmux save-buffer - | xclip -i -sel clipboard"
+
+
+## WINDOWS ##
+#=============================================================================#
+bind - split-window -v
+bind | split-window -h
 
 ## Fast pane selection
 bind -n C-S-Left select-pane -L
@@ -42,6 +59,13 @@ bind -n C-S-Right select-pane -R
 bind -n C-S-Up select-pane -U
 bind -n C-S-Down select-pane -D
 
+## Fast window selection
+bind -n C-S-M-Right next-window
+bind -n C-S-M-Left previous-window
+
+
+## CONFIG ##
+#=============================================================================#
 ## Reload config file
 bind r source-file $HOME/.tmux.conf \; display "tmux config reloaded!"
 
