--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,8 @@ set-window-option -g window-status-current-style 'fg=colour87,bg=colour233'
 set-option -wg automatic-rename off
 
 # Start counting pane and window number at 1
-# set -g base-index 1
-# setw -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 #=============================================================================#
 # Uncomment these lines to get rid of the defaults
