Reconfigure everything with zsh. Alias tmux with zsh as the default shell.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,8 @@
 ## TMUX CUSTOMIZATION FILE
 # Author R. Bate
 
-
+## ZSH ##
+#set -g default-command /usr/bin/zsh
 
 ## COLOURS ##
 #=============================================================================#
@@ -28,8 +29,8 @@ set-window-option -g window-status-current-style 'fg=colour87,bg=colour233'
 set-option -wg automatic-rename off
 
 # Start counting pane and window number at 1
-# set -g base-index 1
-# setw -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 #=============================================================================#
 # Uncomment these lines to get rid of the defaults
