--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,10 @@
 ## TMUX CUSTOMIZATION FILE
 # Author R. Bate
 
-# AUTOMATIC RENAMING
-set-option -wg automatic-rename off
 
+
+## COLOURS ##
+#=============================================================================#
 # Border panes, active and inactive
 set -g pane-border-style 'fg=colour0,bg=colour234'
 set -g pane-active-border-style 'fg=colour70,bg=colour235'
@@ -16,64 +17,55 @@ set -g window-active-style 'fg=colour87,bg=colour233'
 set-option -g status-style 'bg=colour234,fg=colour70'
 
 # window titles
-set-window-option -g window-status-style 'bg=colour17,fg=colour234'
-set-window-option -g window-status-current-style 'bg=colour16,fg=colour70'
+set-window-option -g window-status-style 'fg=color242,bg=color232'
+set-window-option -g window-status-current-style 'fg=colour87,bg=colour233'
+#=============================================================================#
 
-# change the background color to white
-# set -g window-active-style bg=white
+
+## TABS ##
+#=============================================================================#
+# AUTOMATIC RENAMING
+set-option -wg automatic-rename off
 
 # Start counting pane and window number at 1
-# set -g base-index 1
-# setw -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
 
-set -s set-clipboard external
-
-bind r source-file ~/.tmux.conf
-
+#=============================================================================#
 # Uncomment these lines to get rid of the defaults
 # unbind '"'
 # unbind %
 
-bind - split-window -v
-bind | split-window -h
 
+## CLIPBOARD ##
+#=============================================================================#
 ## Make use of xclip to copy to system register
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-c run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
-
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-
-## Design changes here !!
-
-
-# Start counting pane and window number at 1
-# set -g base-index 1
-# setw -g pane-base-index 1
-
 set -s set-clipboard external
 
-bind r source-file ~/.tmux.conf
+bind C-S-c run-shell "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-S-v run-shell "tmux set-buffer $(xclip -o -sel clipboard); tmux paste-buffer"
 
-# Uncomment these lines to get rid of the defaults
-# unbind '"'
-# unbind %
+bind C-w run-shell "tmux save-buffer - | xclip -i -sel clipboard"
 
+
+## WINDOWS ##
+#=============================================================================#
 bind - split-window -v
 bind | split-window -h
 
-## Make use of xclip to copy to system register
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-c run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
+## Fast pane selection
+bind -n C-S-Left select-pane -L
+bind -n C-S-Right select-pane -R
+bind -n C-S-Up select-pane -U
+bind -n C-S-Down select-pane -D
 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+## Fast window selection
+bind -n C-S-M-Right next-window
+bind -n C-S-M-Left previous-window
 
 
-## Design changes here !!
+## CONFIG ##
+#=============================================================================#
+## Reload config file
+bind r source-file $HOME/.tmux.conf \; display "tmux config reloaded!"
 
