--- a/conda_envs/sci.yml
+++ b/conda_envs/sci.yml
@@ -1,5 +1,6 @@
 name: scientific
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -19,8 +20,8 @@ dependencies:
   - brotli-bin=1.0.9=h5eee18b_7
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.05.30=h06a4308_0
-  - certifi=2023.7.22=py310h06a4308_0
+  - ca-certificates=2023.12.12=h06a4308_0
+  - certifi=2023.11.17=py310h06a4308_0
   - cffi=1.15.1=py310h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - comm=0.1.2=py310h06a4308_0
@@ -42,6 +43,7 @@ dependencies:
   - glib=2.69.1=he621ea3_2
   - gmp=6.2.1=h295c915_3
   - gmpy2=2.1.2=py310heeb90bb_0
+  - greenlet=3.0.1=py310h6a678d5_0
   - gst-plugins-base=1.14.1=h6a678d5_1
   - gstreamer=1.14.1=h5eee18b_1
   - icu=58.2=he6710b0_3
@@ -105,19 +107,21 @@ dependencies:
   - mpc=1.1.0=h10f8cd9_1
   - mpfr=4.0.2=hb69a4c5_1
   - mpmath=1.3.0=py310h06a4308_0
+  - msgpack-python=1.0.3=py310hd09550d_0
   - munkres=1.1.4=py_0
   - nbclassic=0.5.5=py310h06a4308_0
   - nbclient=0.5.13=py310h06a4308_0
   - nbconvert=6.5.4=py310h06a4308_0
   - nbformat=5.7.0=py310h06a4308_0
   - ncurses=6.4=h6a678d5_0
+  - neovim=0.3.1=pyhd8ed1ab_3
   - nest-asyncio=1.5.6=py310h06a4308_0
   - notebook-shim=0.2.2=py310h06a4308_0
   - nspr=4.35=h6a678d5_0
   - nss=3.89.1=h6a678d5_0
   - numpy=1.23.5=py310hd5efca6_0
   - numpy-base=1.23.5=py310h8e6c178_0
-  - openssl=3.0.10=h7f8727e_0
+  - openssl=3.0.12=h7f8727e_0
   - packaging=23.0=py310h06a4308_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
@@ -136,6 +140,7 @@ dependencies:
   - pycparser=2.21=pyhd3eb1b0_0
   - pyerfa=2.0.0=py310h7f8727e_0
   - pygments=2.15.1=py310h06a4308_1
+  - pynvim=0.5.0=pyhd8ed1ab_0
   - pyopenssl=23.2.0=py310h06a4308_0
   - pyparsing=3.0.9=py310h06a4308_0
   - pyqt=5.15.7=py310h6a678d5_1
