reorganized vanillify. Aliased python3, changed color scheme for tmux, added lcg helper.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ set -g pane-active-border-style 'fg=colour70,bg=colour235'
 
 # change the background color to white
 set -g window-style 'fg=colour242,bg=colour232'
-set -g window-active-style 'fg=colour87,bg=colour233'
+set -g window-active-style 'fg=colour15,bg=colour233' #87
 
 # Status bar
 set-option -g status-style 'bg=colour234,fg=colour70'
