Tmux conf for nesting, screen colors and aliasing.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,17 @@
 ## TMUX CUSTOMIZATION FILE
 # Author R. Bate
 
-
-
 ## COLOURS ##
 #=============================================================================#
+set -g default-terminal "xterm-256color"
+
 # Border panes, active and inactive
 set -g pane-border-style 'fg=colour0,bg=colour234'
 set -g pane-active-border-style 'fg=colour70,bg=colour235'
 
 # change the background color to white
 set -g window-style 'fg=colour242,bg=colour232'
-set -g window-active-style 'fg=colour87,bg=colour233'
+set -g window-active-style 'fg=colour15,bg=colour233'
 
 # Status bar
 set-option -g status-style 'bg=colour234,fg=colour70'
@@ -63,6 +63,15 @@ bind -n C-S-Down select-pane -D
 bind -n C-S-M-Right next-window
 bind -n C-S-M-Left previous-window
 
+## NESTING ##
+bind-key -n C-g send-prefix
+set-option -g prefix C-b
+set-option -g prefix2 C-s 
+
+## ALIASES ##
+#=============================================================================#
+set -s command-alias[10] rew='rename-window'
+set -s command-alias[11] res='rename-session'
 
 ## CONFIG ##
 #=============================================================================#
