Updates to dotfiles, simple bashrc script, notes on README, lcg environment, updates setup scripts.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ set-window-option -g window-status-current-style 'fg=colour87,bg=colour233'
 ## TABS ##
 #=============================================================================#
 # AUTOMATIC RENAMING
-set-option -wg automatic-rename off
+set-option -wg automatic-rename on
 
 # Start counting pane and window number at 1
 set -g base-index 1
@@ -64,6 +64,14 @@ bind -n C-S-Down select-pane -D
 bind -n C-S-M-Right next-window
 bind -n C-S-M-Left previous-window
 
+## NESTING ##
+#=============================================================================#
+set-option -g prefix2 C-s
+
+## ALIASES ##
+#=============================================================================#
+set -s command-alias[12] rew='rename-window'
+set -s command-alias[13] res='rename-session'
 
 ## CONFIG ##
 #=============================================================================#
