--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,32 +1,56 @@
 ## TMUX CUSTOMIZATION FILE
 # Author R. Bate
 
-## ZSH ##
-#set -g default-command /usr/bin/zsh
 
 ## COLOURS ##
 #=============================================================================#
-# Border panes, active and inactive
-set -g pane-border-style 'fg=colour0,bg=colour234'
-set -g pane-active-border-style 'fg=colour70,bg=colour235'
-
-# change the background color to white
-set -g window-style 'fg=colour242,bg=colour232'
-set -g window-active-style 'fg=colour15,bg=colour233' #87
-
-# Status bar
-set-option -g status-style 'bg=colour234,fg=colour70'
+set -g default-terminal "xterm-256color"
 
 # window titles
-set-window-option -g window-status-style 'fg=color242,bg=color232'
-set-window-option -g window-status-current-style 'fg=colour87,bg=colour233'
+#set-window-option -g window-status-style 'fg=color249,bg=color236'
+#set-window-option -g window-status-current-style 'fg=white,bg=colour232'
+set -g window-status-style 'fg=color245,bg=color235'
+set -g window-status-current-style 'fg=white,bg=colour232'
+
+# change the background color to white
+set -g window-style 'fg=colour245,bg=colour235'
+set -g window-active-style 'fg=colour15,bg=colour233'
+
+# Border panes, active and inactive
+set -g pane-border-style 'fg=colour0,bg=colour237'
+set -g pane-active-border-style 'fg=colour70,bg=colour235'
+
+## Status bar
+#=============================================================================#
+
+# Colors
+set-option -g status-style 'bg=colour238,fg=colour70'
+
+# left
+set-option -g status-left-length '25'
+set-option -g status-left "#[fg=white]<-- #[fg=color70][#S] #[fg=white]-->"
+
+# centre
+set-option -g status-justify 'centre'
+
+# right
+# defaults
+# status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" %H:%M %d-%b-%y"
+set-option -g status-right-length '60'
+set-option -g status-right '#[fg=white]< -- #[fg=color70]Mem: #(~/dotfiles/status_right.sh) #[fg=white]~ #[fg=red]%H:%M #[fg=white]~ #[fg=white]%d-%b-%y -->'
+# free -m | awk '/Mem/{printf "%.2f%%", 100*$3/$2}'
+#free -m -h | awk '/Mem/{printf $3"/"$2}'
+
+# Command background
+set-option -g message-style 'bg=colour226,fg=colour232'
+
 #=============================================================================#
 
 
 ## TABS ##
 #=============================================================================#
 # AUTOMATIC RENAMING
-set-option -wg automatic-rename on
+set-option -wg automatic-rename off
 
 # Start counting pane and window number at 1
 set -g base-index 1
@@ -51,8 +75,8 @@ bind C-w run-shell "tmux save-buffer - | xclip -i -sel clipboard"
 
 ## WINDOWS ##
 #=============================================================================#
-bind - split-window -v
-bind | split-window -h
+bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 
 ## Fast pane selection
 bind -n C-S-Left select-pane -L
@@ -65,13 +89,14 @@ bind -n C-S-M-Right next-window
 bind -n C-S-M-Left previous-window
 
 ## NESTING ##
-#=============================================================================#
-set-option -g prefix2 C-s
+bind-key -n C-g send-prefix
+set-option -g prefix C-b
+set-option -g prefix2 C-s 
 
 ## ALIASES ##
 #=============================================================================#
-set -s command-alias[12] rew='rename-window'
-set -s command-alias[13] res='rename-session'
+set -s command-alias[10] rew='rename-window'
+set -s command-alias[11] res='rename-session'
 
 ## CONFIG ##
 #=============================================================================#
