--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,10 @@ set -g window-active-style 'fg=colour15,bg=colour233'
 set -g pane-border-style 'fg=colour0,bg=colour237'
 set -g pane-active-border-style 'fg=colour70,bg=colour235'
 
+## Mouse
+#=============================================================================#
+# bind-key C-b m set-option -g mouse \; display 'Mouse #{?mouse,on,off}'
+
 ## Status bar
 #=============================================================================#
 
@@ -43,6 +47,9 @@ set-option -g status-right '#[fg=white]< -- #[fg=color70]Mem: #(~/dotfiles/statu
 
 # Command background
 set-option -g message-style 'bg=colour226,fg=colour232'
+
+# Copy mode
+set-option -g mode-style 'bg=colour226,fg=colour232'
 
 #=============================================================================#
 
@@ -69,7 +76,6 @@ set -s set-clipboard external
 
 bind C-S-c run-shell "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-S-v run-shell "tmux set-buffer $(xclip -o -sel clipboard); tmux paste-buffer"
-
 bind C-w run-shell "tmux save-buffer - | xclip -i -sel clipboard"
 
 
@@ -95,11 +101,23 @@ set-option -g prefix2 C-s
 
 ## ALIASES ##
 #=============================================================================#
-set -s command-alias[10] rew='rename-window'
-set -s command-alias[11] res='rename-session'
+set -s command-alias[100] rew='rename-window'
+set -s command-alias[101] res='rename-session'
 
 ## CONFIG ##
 #=============================================================================#
 ## Reload config file
 bind r source-file $HOME/.tmux.conf \; display "tmux config reloaded!"
+
+## TMUX PLUGINS ##
+#=============================================================================#
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+# This is commented out because it changes hotkeys
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+
+
+# This needs to be at the bottom of the tmux conf
+run '~/.tmux/plugins/tpm/tpm'
+
 
