Harpoon2 with keymaps working. Key remaps for vimtex. Telescope remaps for git files. Updated neovim README with hotkeys and packages. tmux.conf: vim copy, added s prefix, turned off mouse. zsh: added aliases, set vim mode, moved git plugin. README.md added tmux hotkey updates.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,11 @@ set -g pane-active-border-style 'fg=colour70,bg=colour235'
 
 ## Mouse
 #=============================================================================#
-# bind-key C-b m set-option -g mouse \; display 'Mouse #{?mouse,on,off}'
+#bind-key C-b m set-option -g mouse \; display 'Mouse #{?mouse,on,off}'
+
+## Vim Copy
+#=============================================================================#
+set -g mode-keys vi
 
 ## Status bar
 #=============================================================================#
@@ -96,6 +100,7 @@ bind -n C-S-M-Left previous-window
 
 ## NESTING ##
 bind-key -n C-g send-prefix
+set-option -g prefix C-s
 set-option -g prefix C-b
 set-option -g prefix2 C-s 
 
