--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,8 +13,10 @@ set -g window-status-style 'fg=color245,bg=color235'
 set -g window-status-current-style 'fg=white,bg=colour232'
 
 # change the background color to white
-set -g window-style 'fg=colour245,bg=colour235'
-set -g window-active-style 'fg=colour15,bg=colour233'
+#set -g window-style 'fg=colour245,bg=colour235'
+#set -g window-active-style 'fg=colour15,bg=colour233'
+set -g window-style 'fg=default,bg=default'
+set -g window-active-style 'fg=default,bg=default'
 
 # Border panes, active and inactive
 set -g pane-border-style 'fg=colour0,bg=colour237'
