Working with persistent tmux sessions on lxplus.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@
 # Author R. Bate
 
 
+## SHELL ##
+#=============================================================================#
+set -g default-shell '/bin/zsh'
+
 ## COLOURS ##
 #=============================================================================#
 set -g default-terminal "xterm-256color"
@@ -19,6 +23,11 @@ set -g window-active-style 'fg=colour15,bg=colour233'
 # Border panes, active and inactive
 set -g pane-border-style 'fg=colour0,bg=colour237'
 set -g pane-active-border-style 'fg=colour70,bg=colour235'
+
+## Vim Copy
+#=============================================================================#
+set -g mode-keys vi 
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel
 
 ## Status bar
 #=============================================================================#
@@ -43,6 +52,9 @@ set-option -g status-right '#[fg=white]< -- #[fg=color70]Mem: #(~/dotfiles/statu
 
 # Command background
 set-option -g message-style 'bg=colour226,fg=colour232'
+
+# Copy mode
+set-option -g mode-style 'bg=colour226,fg=colour232'
 
 #=============================================================================#
 
