Updated tmux conf with mouse, new snippets, NVIM: rainbow delimeters and indent blankline, zathurarc file and updated setupuser.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,12 +19,16 @@ set -g window-style 'fg=default,bg=default'
 set -g window-active-style 'fg=default,bg=default'
 
 # Border panes, active and inactive
-set -g pane-border-style 'fg=colour0,bg=colour237'
-set -g pane-active-border-style 'fg=colour70,bg=colour235'
+#set -g pane-border-style 'fg=colour0,bg=colour237'
+#set -g pane-active-border-style 'fg=colour70,bg=colour235'
+set -g pane-border-style 'fg=colour232,bg=default'
+set -g pane-active-border-style 'fg=colour239,bg=default'
 
 ## Mouse
 #=============================================================================#
-#bind-key C-b m set-option -g mouse \; display 'Mouse #{?mouse,on,off}'
+set -g mouse on
+#bind-key -n C-b-m 'set-option -g mouse on'# \; display 'Mouse #{?mouse,on,off}'
+#set -g mouse off
 
 ## Vim Copy
 #=============================================================================#
@@ -34,7 +38,8 @@ set -g mode-keys vi
 #=============================================================================#
 
 # Colors
-set-option -g status-style 'bg=colour238,fg=colour70'
+#set-option -g status-style 'bg=colour238,fg=colour70'
+set-option -g status-style 'bg=default,fg=colour70'
 
 # left
 set-option -g status-left-length '25'
