Updated aliases, gitconfig and tmux colouring.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,16 +13,16 @@ set -g default-terminal "xterm-256color"
 # window titles
 #set-window-option -g window-status-style 'fg=color249,bg=color236'
 #set-window-option -g window-status-current-style 'fg=white,bg=colour232'
-set -g window-status-style 'fg=color245,bg=color235'
-set -g window-status-current-style 'fg=white,bg=colour232'
+set -g window-status-style 'fg=color245,bg=color232'
+set -g window-status-current-style 'fg=white,bg=color235'
 
 # change the background color to white
-set -g window-style 'fg=colour245,bg=colour235'
-set -g window-active-style 'fg=colour15,bg=colour233'
+set -g window-style 'fg=colour245,bg=default'
+set -g window-active-style 'fg=colour15,bg=default'
 
 # Border panes, active and inactive
-set -g pane-border-style 'fg=colour0,bg=colour237'
-set -g pane-active-border-style 'fg=colour70,bg=colour235'
+set -g pane-border-style 'fg=colour0,bg=default'
+set -g pane-active-border-style 'fg=colour70,bg=default'
 
 ## Vim Copy
 #=============================================================================#
@@ -33,7 +33,7 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel
 #=============================================================================#
 
 # Colors
-set-option -g status-style 'bg=colour238,fg=colour70'
+set-option -g status-style 'fg=colour70,bg=default'
 
 # left
 set-option -g status-left-length '25'
