--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -44,7 +44,7 @@ history               = 65535
 #bold                  = { family = "FantasqueSansMNerdFont Propo", style = "Bold" }
 #italic                = { family = "FantasqueSansMNerdFont Propo", style = "Italic" }
 #bold_italic           = { family = "FantasqueSansMNerdFont Propo", style = "Bold Italic" }
-size                  = 24.0
+size                  = 14.0
 #offset                = { x = 0, y = 0 }
 #glyph_offset          = { x = 0, y = 0 }
 #builtin_box_drawing   = true
@@ -132,10 +132,11 @@ size                  = 24.0
 draw_bold_text_with_bright_colors = true
 
 [bell]
+# enabled               = false
 animation             = "EaseOutExpo"
 duration              = 0
 color                 = "#C0C5CE"
-command               = { program = "notify-send", args = ["alacritty", "bell",] }
+# command               = { program = "notify-send", args = ["alacritty", "bell",] }
 
 [selection]
 #semantic_escape_chars = ",│‘|:"' ()[]{}<>t"
