--- a/conda_envs/HEP.yml
+++ b/conda_envs/HEP.yml
@@ -3,286 +3,24 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - _sysroot_linux-64_curr_repodata_hack=3=h5bd9786_13
-  - afterimage=1.21=ha9998ff_1003
-  - anyio=3.6.2=pyhd8ed1ab_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py39hb9d737c_3
-  - asttokens=2.2.1=pyhd8ed1ab_0
-  - atk-1.0=2.38.0=hd4edc92_1
-  - attrs=22.2.0=pyh71513ae_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - beautifulsoup4=4.11.1=pyha770c72_0
-  - binutils=2.39=hdd6e379_1
-  - binutils_impl_linux-64=2.39=he00db2b_1
-  - binutils_linux-64=2.39=h5fc0e48_11
-  - bleach=5.0.1=pyhd8ed1ab_0
-  - brotli=1.0.9=h166bdaf_8
-  - brotli-bin=1.0.9=h166bdaf_8
-  - brotli-python=1.0.9=py39h5a03fae_8
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.18.1=h7f98852_0
-  - c-compiler=1.3.0=h7f98852_0
-  - ca-certificates=2023.5.7=hbcca054_0
-  - cairo=1.16.0=h6cf1ce9_1008
-  - certifi=2023.5.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py39he91dace_3
-  - cfitsio=3.470=hb418390_7
-  - charset-normalizer=3.2.0=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.1.2=pyhd8ed1ab_0
-  - compilers=1.3.0=ha770c72_0
-  - contourpy=1.0.7=py39h4b4f3f3_0
-  - cxx-compiler=1.3.0=h4bd325d_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - davix=0.7.6=hb44b51d_0
-  - dbus=1.13.6=h5008d03_3
-  - debugpy=1.6.6=py39h227be39_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - expat=2.5.0=h27087fc_0
-  - fftw=3.3.10=nompi_hf0379b8_106
-  - flit-core=3.8.0=pyhd8ed1ab_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.1=hc2a2eb6_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.39.3=py39h72bdee0_0
-  - fortran-compiler=1.3.0=h1990efc_0
-  - freetype=2.12.1=hca18f0e_1
-  - fribidi=1.0.10=h36c2ea0_0
-  - ftgl=2.4.0=hbcb1f35_0
-  - gcc=9.5.0=h1fea6ba_11
-  - gcc_impl_linux-64=9.5.0=h99780fb_19
-  - gcc_linux-64=9.5.0=h4258300_11
-  - gdk-pixbuf=2.42.6=h04a7f16_0
-  - gettext=0.21.1=h27087fc_0
-  - gfortran=9.5.0=hdd025ce_11
-  - gfortran_impl_linux-64=9.5.0=hf1096a2_19
-  - gfortran_linux-64=9.5.0=hdb51d14_11
-  - giflib=5.2.1=h36c2ea0_2
-  - gl2ps=1.4.2=h0708190_0
-  - glew=2.1.0=h9c3ff4c_2
-  - graphite2=1.3.13=h58526e2_1001
-  - graphviz=2.49.0=h85b4f2f_0
-  - gsl=2.6=he838d99_2
-  - gsoap=2.8.123=h598caef_0
-  - gst-plugins-base=1.18.4=h29181c9_0
-  - gstreamer=1.18.5=h9f60fe5_3
-  - gtk2=2.24.33=h539f30e_1
-  - gts=0.7.6=h64030ff_2
-  - gxx=9.5.0=h1fea6ba_11
-  - gxx_impl_linux-64=9.5.0=h99780fb_19
-  - gxx_linux-64=9.5.0=h43f449f_11
-  - harfbuzz=3.1.1=h83ec7ef_0
-  - icu=68.2=h9c3ff4c_0
-  - idna=3.4=pyhd8ed1ab_0
-  - importlib-metadata=6.0.0=pyha770c72_0
-  - importlib-resources=5.10.2=pyhd8ed1ab_0
-  - importlib_resources=5.10.2=pyhd8ed1ab_0
-  - ipykernel=6.20.1=pyh210e3f2_0
-  - ipyparallel=8.4.1=pyhd8ed1ab_0
-  - ipython=8.8.0=pyh41d4057_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jpeg=9e=h166bdaf_2
-  - jsonschema=4.17.3=pyhd8ed1ab_0
-  - jupyter_client=7.4.8=pyhd8ed1ab_0
-  - jupyter_core=5.2.0=py39hf3d152e_0
-  - jupyter_events=0.5.0=pyhd8ed1ab_1
-  - jupyter_server=2.0.6=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.4.3=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - kernel-headers_linux-64=2.6.32=he073ed8_15
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.4=py39hf939315_1
-  - krb5=1.19.3=h3790be6_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.39=hcc3a1bd_1
-  - lerc=4.0.0=h27087fc_0
-  - libblas=3.9.0=16_linux64_openblas
-  - libbrotlicommon=1.0.9=h166bdaf_8
-  - libbrotlidec=1.0.9=h166bdaf_8
-  - libbrotlienc=1.0.9=h166bdaf_8
-  - libcblas=3.9.0=16_linux64_openblas
-  - libclang=11.1.0=default_ha53f305_1
-  - libcurl=7.86.0=h7bff187_1
-  - libcxx=11.1.0=h4bd325d_0
-  - libcxxabi=11.1.0=ha770c72_0
-  - libdeflate=1.14=h166bdaf_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libevent=2.1.10=h9b69904_4
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-devel_linux-64=9.5.0=h0a57e50_19
-  - libgcc-ng=12.2.0=h65d4601_19
-  - libgd=2.3.2=h78a0170_0
-  - libgfortran-ng=12.2.0=h69a702a_19
-  - libgfortran5=12.2.0=h337968e_19
-  - libglib=2.74.1=h606061b_1
-  - libglu=9.0.0=he1b5a44_1001
-  - libgomp=12.2.0=h65d4601_19
-  - libhwloc=2.7.1=h32351e8_0
-  - libiconv=1.17=h166bdaf_0
-  - liblapack=3.9.0=16_linux64_openblas
-  - libllvm11=11.1.0=he0ac6c6_5
-  - libllvm9=9.0.1=default_hc23dcda_7
-  - libnghttp2=1.51.0=hdcd2b5c_0
-  - libnsl=2.0.0=h7f98852_0
-  - libopenblas=0.3.21=pthreads_h78a6416_3
-  - libpng=1.6.39=h753d276_0
-  - libpq=13.8=hd77ab85_0
-  - librsvg=2.52.5=hc3c00ef_1
-  - libsanitizer=9.5.0=h2f262e1_19
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.40.0=h753d276_0
-  - libssh2=1.10.0=haa6b8db_3
-  - libstdcxx-devel_linux-64=9.5.0=h0a57e50_19
-  - libstdcxx-ng=12.2.0=h46fd767_19
-  - libtiff=4.2.0=hbd63e13_2
-  - libtool=2.4.7=h27087fc_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp=1.2.0=h3452ae3_0
-  - libwebp-base=1.2.0=h7f98852_2
-  - libxcb=1.13=h7f98852_1004
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.12=h72842e0_0
-  - libzlib=1.2.13=h166bdaf_4
-  - llvmlite=0.39.1=py39h7d9a04d_1
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - markupsafe=2.1.2=py39h72bdee0_0
-  - matplotlib=3.7.1=py39hf3d152e_0
-  - matplotlib-base=3.7.1=py39he190548_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - metakernel=0.29.4=pyhd8ed1ab_0
-  - mistune=2.0.4=pyhd8ed1ab_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=8.0.25=ha770c72_0
-  - mysql-libs=8.0.25=h935591d_0
-  - nbclassic=0.4.8=pyhd8ed1ab_0
-  - nbclient=0.7.2=pyhd8ed1ab_0
-  - nbconvert=7.2.7=pyhd8ed1ab_0
-  - nbconvert-core=7.2.7=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.2.7=pyhd8ed1ab_0
-  - nbformat=5.7.1=pyhd8ed1ab_0
-  - ncurses=6.3=h27087fc_1
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - nlohmann_json=3.11.2=h27087fc_0
-  - notebook=6.5.2=pyha770c72_1
-  - notebook-shim=0.2.2=pyhd8ed1ab_0
-  - nspr=4.35=h27087fc_0
-  - nss=3.89=he45b914_0
-  - numba=0.56.4=py39h61ddf18_0
-  - numpy=1.23.5=py39h3d75532_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1u=hd590300_0
-  - packaging=22.0=pyhd8ed1ab_0
-  - pandoc=2.19.2=h32600fe_1
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - pango=1.48.10=h54213e6_2
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
-  - pcre2=10.40=hc3806b6_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=8.2.0=py39hf95b381_1
-  - pip=22.3.1=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - platformdirs=2.6.2=pyhd8ed1ab_0
-  - pooch=1.7.0=pyha770c72_3
-  - portalocker=2.7.0=py39hf3d152e_0
-  - prometheus_client=0.15.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.36=pyha770c72_0
-  - psutil=5.9.4=py39hb9d737c_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.14.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.12.3=py39h03dd644_4
-  - pyrsistent=0.19.3=py39h72bdee0_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - pythia8=8.307=py39h5a03fae_0
-  - python=3.9.10=h85951f9_2_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
-  - python-json-logger=2.0.4=pyhd8ed1ab_0
-  - python_abi=3.9=3_cp39
-  - pyyaml=6.0=py39hb9d737c_5
-  - pyzmq=25.0.0=py39h0be026e_0
-  - qt=5.12.9=hda022c4_4
-  - readline=8.1.2=h0f457ee_0
-  - requests=2.31.0=pyhd8ed1ab_0
-  - root=6.22.8=py39h001636d_3
-  - root-binaries=6.22.8=py39h001636d_3
-  - root-dependencies=6.22.8=py39h001636d_3
-  - root_base=6.22.8=py39ha9ab4c2_3
-  - scipy=1.10.1=py39h6183b62_3
-  - scitokens-cpp=0.7.1=h0255ffa_0
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=65.6.3=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.3.0=pyhd8ed1ab_0
-  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
-  - sqlite=3.40.0=h4ff8645_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - sysroot_linux-64=2.12=he073ed8_15
-  - tbb=2021.7.0=h924138e_0
-  - tbb-devel=2021.7.0=h924138e_0
-  - terminado=0.17.1=pyh41d4057_0
-  - tinycss2=1.2.1=pyhd8ed1ab_0
-  - tk=8.6.12=h27826a3_0
-  - tornado=6.2=py39hb9d737c_1
-  - tqdm=4.64.1=pyhd8ed1ab_0
-  - traitlets=5.8.0=pyhd8ed1ab_0
-  - typing-extensions=4.4.0=hd8ed1ab_0
-  - typing_extensions=4.4.0=pyha770c72_0
-  - unicodedata2=15.0.0=py39hb9d737c_0
-  - urllib3=2.0.4=pyhd8ed1ab_0
-  - vdt=0.4.3=h9c3ff4c_0
-  - vector-classes=1.4.3=h924138e_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - websocket-client=1.4.2=pyhd8ed1ab_0
-  - wheel=0.38.4=pyhd8ed1ab_0
-  - xorg-fixesproto=5.0=h7f98852_1002
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
-  - xorg-libx11=1.6.12=h36c2ea0_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxcursor=1.2.0=h516909a_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxfixes=5.0.3=h516909a_1004
-  - xorg-libxft=2.3.4=hc534e41_1
-  - xorg-libxpm=3.5.13=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-libxt=1.1.5=h516909a_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xrootd=5.4.2=py39hbfe9b54_0
-  - xxhash=0.8.0=h7f98852_3
-  - xz=5.2.6=h166bdaf_0
-  - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.4=h9c3ff4c_1
-  - zipp=3.11.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h166bdaf_4
-  - zstd=1.4.9=ha95c52a_0
+  - root
+  - python=3.9.10
+  - root-dependencies
+  - matplotlib
+  - scipy
+  - pynvim
+  - jupyterlab
+  - numpy
+  - pip
+  - awkward
+  - pandas
+  - uproot
+  - root_numpy
+  - scikit-hep
+  - pyarrow
+  - fastparquet
+  - dask
+  - cabinetry
   - pip:
       - atlas-mpl-style==0.21.0
       - numexpr==2.8.4
