--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,6 +101,12 @@ bind -n C-S-Right select-pane -R
 bind -n C-S-Up select-pane -U
 bind -n C-S-Down select-pane -D
 
+# a la vim
+bind -n C-S-h select-pane -L
+bind -n C-S-l select-pane -R
+bind -n C-S-k select-pane -U
+bind -n C-S-j select-pane -D
+
 ## Fast window selection
 bind -n C-S-M-Right next-window
 bind -n C-S-M-Left previous-window
