Changed prefix keys to not mess with neovim C-b keybindings.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,9 +113,12 @@ bind -n C-S-M-Left previous-window
 
 ## NESTING ##
 bind-key -n C-g send-prefix
-set-option -g prefix C-s
-set-option -g prefix C-b
+set-option -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+# second key
 set-option -g prefix2 C-s 
+bind-key C-s send-prefix
 
 ## ALIASES ##
 #=============================================================================#
