Tmux config for vim like window switching.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,6 +111,10 @@ bind -n C-j select-pane -D
 bind -n C-S-M-Right next-window
 bind -n C-S-M-Left previous-window
 
+# a la vim
+bind -n C-M-h previous-window
+bind -n C-M-l next-window
+
 ## NESTING ##
 bind-key -n C-g send-prefix
 set-option -g prefix C-a
